--- a/src/styles/components/_banner.scss
+++ b/src/styles/components/_banner.scss
@@ -81,9 +81,9 @@
   text-align: center;
   border-radius: 10rem;
   color: $white;
-  // margin-right: 1rem;
   box-shadow: 1px 1px 1rem 0px rgba($semi-black, 0.25);
   transition: background-color, transform ease 0.3s;
+  cursor: pointer;
 
   &:hover {
     transform: translateY(-2px);
